--- a/hzert/src/style.css
+++ b/hzert/src/style.css
@@ -25,7 +25,8 @@ body {
   background-color: var(--primary);
 }
 
-.container {
+.songcontainer,
+.queuecontainer {
   margin: 25px;
   margin-left: 25px;
   margin-right: 25px;
@@ -61,7 +62,7 @@ body {
 }
 
 .card img {
-  max-width: 500px;
+  max-width: 300px;
   height: auto;
 }
 
@@ -77,7 +78,8 @@ body {
   margin-top: 10px;
 }
 
-.btn {
+.modebtn,
+.queuebtn {
   background-color: var(--secondary);
   color: var(--primary);
   border: none;
@@ -87,4 +89,19 @@ body {
   border-radius: 8px;
   cursor: pointer;
   margin-top: 10px;
+}
+
+.openbtn {
+  background-color: var(--secondary);
+  color: var(--primary);
+  max-width: 120px;
+  position: fixed;
+  border: none;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 8px;
+  cursor: pointer;
+  right: 25px;
+  bottom: 25px;
 }
