--- a/hzert/src/style.css
+++ b/hzert/src/style.css
@@ -103,10 +103,10 @@ body {
   font-weight: 500;
   border-radius: 8px;
   cursor: pointer;
-  margin-top: 10px;
-  display: block;
-  margin: 10px auto; 
+  margin: 10px;
+  display: inline-block; 
 }
+
 
 .openbtn {
   border: 1px solid var(--secondary);
