i work on add sojng

--- a/hzert/src/style.css
+++ b/hzert/src/style.css
@@ -82,7 +82,7 @@ body {
 }
 
 .modebtn,
-.queuebtn {
+.queuebtn, .dftbtn {
   background-color: var(--secondary);
   color: var(--primary);
   border: none;
@@ -175,3 +175,13 @@ body {
   padding: 20px;
 }
 
+.image-preview {
+  width: 250px;
+  height: 250px;
+  background-color: var(--primary);
+  border: 2px dashed var(--primary);
+  margin-bottom: 20px;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center;
+}
